--- a/package.json
+++ b/package.json
@@ -18,5 +18,18 @@
   "bugs": {
     "url": "https://github.com/JoacimNilsen/physics-game/issues"
   },
-  "homepage": "https://github.com/JoacimNilsen/physics-game#readme"
+  "homepage": "https://github.com/JoacimNilsen/physics-game#readme",
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
+    "babel-jest": "^26.2.2",
+    "babel-loader": "^8.1.0",
+    "browser-sync": "^2.26.10",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.2.2",
+    "prettier": "2.0.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
